[update] swagger
